--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "typestarsv",
   "version": "0.1.0",
   "license": "MIT",
+  "repository": {
+    "url": "https://github.com/dmcneil/typestarsv"
+  },
   "main": "./build/index.js",
   "types": "./build/index.d.ts",
   "scripts": {
