--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,9 @@
     "experimentalDecorators": true,
     "sourceMap": true,
     "declaration": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "build"
+  ]
 }
