--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "typedsv",
   "version": "0.1.0",
   "license": "MIT",
+  "description": "Parse and map delimiter-separated values (csv, tsv, etc.) to TypeScript/ES6+ classes.",
+  "author": {
+    "name": "Derek McNeil",
+    "email": "derekmcneil90@gmail.com"
+  },
   "repository": {
+    "type": "git",
     "url": "https://github.com/dmcneil/typedsv"
   },
   "main": "./build/index.js",
@@ -11,9 +17,22 @@
     "clean": "rm -rf ./build/",
     "build": "npm run clean && tsc",
     "test": "jest --config jestconfig.json",
+    "coverage": "jest --coverage=true --config jestconfig.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "tslint --fix -p tsconfig.json"
   },
+  "keywords": [
+    "dsv",
+    "dsv-parser",
+    "csv",
+    "csv-parser",
+    "tsv",
+    "tsv-parser",
+    "delimiter",
+    "parser",
+    "mapper",
+    "typescript"
+  ],
   "dependencies": {
     "reflect-metadata": "^0.1.13"
   },
@@ -29,6 +48,7 @@
     "typescript": "^3.2.1"
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "**/*.spec.ts"
   ]
 }
